# bible

./: .gitignore  CLAUDE.md  Dockerfile  Dockerfile.al  Dockerfile.distroless  Dockerfile.llvm  Dockerfile.spark  PHASE10_DESIGN.md  PHASE11_DESIGN.md  PHASE12_DESIGN.md  PHASE13_DESIGN.md  PHASE14_DESIGN.md  PHASE15_DESIGN.md  PHASE5_DESIGN.md  PHASE7_DESIGN.md  PHASE8_DESIGN.md  PHASE9_DESIGN.md  README.md  SPEC.md  bibles.toml  builder-userdata.sh  container-executor.json  dash_app.py  emr.template  gcp-builder-userdata.sh  minio-deployment.yaml  minio-start.sh  my_vocab.txt  parser.py  parser.scala  pyproject.toml  requirements.txt  spark-k8s-instructions.sh  start.py  test_align_audio.py  test_audio.py  test_dash_app.py  test_export_static.py  test_parser.py  test_site_smoke.py  (+3 more)
.github/ISSUE_TEMPLATE/: suggest_a_change.md
.github/workflows/: ci.yml
assets/: audio.js
sample/: greek_vocab.txt  hebrew_vocab.txt  my_vocab.txt  nasb_sample.txt
scripts/: align_audio.py  build_english_poset.py  convert_delitzsch_nt.py  convert_getbible.py  convert_gnt.py  convert_modern_he_ot.py  convert_wlc.py  export_static.py  ingest_audio.py  transcribe_audio.py
site/: app.js  index.html  manifest.webmanifest  rank.js  style.css
